[KULCU] Admin , Seller , User register ve login işlemleri bitt